<resources>
    <string name="app_name">Area Stats</string>
    <string name="general_population">General Population</string>
    <string name="unemployment_rate">Unemployment Rate:     </string>
    <string name="male_to_female_ratio">Male to Female Ratio:     </string>
    <string name="below_poverty_level">Below Poverty Level:     </string>
    <string name="non_english_speakers">Non-English Speakers:     </string>
    <string name="veterans">Veterans:     </string>
    <string name="babies_born_past_year">Birth Rate (From Previous Year):     </string>
    <string name="with_health_insurance">With Health Insurance:     </string>
    <string name="housing">Housing</string>
    <string name="median_home_price">Median Home Price:     </string>
    <string name="average_household_income">Average Household Income:     </string>
    <string name="total_homes">Total Homes:     </string>
    <string name="vacant_homes">Vacant Homes:     </string>
    <string name="education">Education</string>
    <string name="in_elementary_middle_school">In Elementary/Middle School:     </string>
    <string name="in_highschool">In Highschool:     </string>
    <string name="in_college">In College:     </string>
    <string name="high_school_dropout">High School Dropout:     </string>
    <string name="with_associate_degree">With Associate Degree:     </string>
    <string name="with_bachelors_degree">With Bachelors Degree:     </string>
    <string name="age">Age</string>
    <string name="median_age">Median Age:     </string>
    <string name="under_age_18">Under Age 18:     </string>
    <string name="under_age_5">Under Age 5:     </string>
    <string name="ages_5_9">Ages 5 - 9:     </string>
    <string name="ages_10_14">Ages 10 - 14:     </string>
    <string name="ages_15_19">Ages 15 - 19:     </string>
    <string name="ages_20_24">Ages 20 - 24:     </string>
    <string name="ages_25_34">Ages 25 - 34:     </string>
    <string name="ages_35_44">Ages 35 - 44:     </string>
    <string name="ages_45_54">Ages 45 - 54:     </string>
    <string name="ages_55_59">Ages 55 - 59:     </string>
    <string name="ages_60_64">Ages 60 - 64:     </string>
    <string name="ages_65_74">Ages 65 - 74:     </string>
    <string name="ages_75_84">Ages 75 - 84:     </string>
    <string name="over_age_85">Over Age 85:     </string>
    <string name="population">Population: </string>
    <string name="hint">Enter the address</string>
    <string name="send">Search Address</string>
</resources>
